[runtime] Implement sidetable path for isUniquelyReferenced

https://bugs.swift.org/browse/SR-5633